phase_3/mini_l.output
Terminals unused in grammar

   UMINUS


Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: %empty
    3          | function functions

    4 function: FUNCTION IDENT SEMICOLON params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    5 params: BEGIN_PARAMS declarations END_PARAMS

    6 declarations: %empty
    7             | declaration SEMICOLON declarations

    8 declaration: IDENT idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    9            | IDENT idents COLON INTEGER

   10 idents: %empty
   11       | COMMA IDENT idents

   12 statements: %empty
   13           | statement SEMICOLON statements

   14 statement: var ASSIGN expression
   15          | IF bool_expr THEN statement SEMICOLON statements ENDIF
   16          | IF bool_expr THEN statement SEMICOLON statements ELSE statement SEMICOLON statements ENDIF
   17          | WHILE bool_expr BEGINLOOP statement SEMICOLON statements ENDLOOP
   18          | DO BEGINLOOP statement SEMICOLON statements ENDLOOP WHILE bool_expr
   19          | READ var vars
   20          | WRITE var vars
   21          | CONTINUE
   22          | RETURN expression

   23 bool_expr: relation_and_expr bool_expressions

   24 bool_expressions: %empty
   25                 | OR relation_and_expr bool_expressions

   26 relation_and_expr: relation_expr relation_and_expressions

   27 relation_and_expressions: %empty
   28                         | AND relation_expr relation_and_expressions

   29 relation_expr: expression comp expression
   30              | TRUE
   31              | FALSE
   32              | L_PAREN bool_expr R_PAREN
   33              | NOT expression comp expression
   34              | NOT TRUE
   35              | NOT FALSE
   36              | NOT L_PAREN bool_expr R_PAREN

   37 comp: EQ
   38     | NEQ
   39     | LT
   40     | GT
   41     | LTE
   42     | GTE

   43 expression: multiplicative_expr expression_loop

   44 expression_loop: %empty
   45                | ADD multiplicative_expr expression_loop
   46                | SUB multiplicative_expr expression_loop

   47 expressions: expression COMMA expressions
   48            | expression
   49            | %empty

   50 terms: %empty
   51      | MOD term terms
   52      | DIV term terms
   53      | MULT term terms

   54 multiplicative_expr: term terms

   55 term: IDENT L_PAREN expressions R_PAREN
   56     | NUMBER
   57     | var
   58     | L_PAREN expression R_PAREN
   59     | SUB NUMBER
   60     | SUB var
   61     | SUB L_PAREN expression R_PAREN

   62 var: IDENT
   63    | IDENT L_SQUARE_BRACKET expression R_SQUARE_BRACKET

   64 vars: %empty
   65     | COMMA var vars


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION <myString> (258) 4
BEGIN_PARAMS <myString> (259) 5
END_PARAMS <myString> (260) 5
BEGIN_LOCALS <myString> (261) 4
END_LOCALS <myString> (262) 4
BEGIN_BODY <myString> (263) 4
END_BODY <myString> (264) 4
INTEGER <myString> (265) 8 9
ARRAY <myString> (266) 8
OF <myString> (267) 8
IF <myString> (268) 15 16
THEN <myString> (269) 15 16
ENDIF <myString> (270) 15 16
ELSE <myString> (271) 16
WHILE <myString> (272) 17 18
DO <myString> (273) 18
BEGINLOOP <myString> (274) 17 18
ENDLOOP <myString> (275) 17 18
CONTINUE <myString> (276) 21
READ <myString> (277) 19
WRITE <myString> (278) 20
AND <myString> (279) 28
OR <myString> (280) 25
NOT <myString> (281) 33 34 35 36
TRUE <myString> (282) 30 34
FALSE <myString> (283) 31 35
RETURN <myString> (284) 22
IDENT <myString> (285) 4 8 9 11 55 62 63
COLON <myString> (286) 8 9
SEMICOLON <myString> (287) 4 7 13 15 16 17 18
COMMA <myString> (288) 11 47 65
NUMBER <myString> (289) 8 56 59
ASSIGN (290) 14
NEQ (291) 38
EQ (292) 37
GTE (293) 42
GT (294) 40
LTE (295) 41
LT (296) 39
SUB (297) 46 59 60 61
ADD (298) 45
MOD (299) 51
DIV (300) 52
MULT (301) 53
UMINUS (302)
L_SQUARE_BRACKET (303) 8 63
R_SQUARE_BRACKET (304) 8 63
L_PAREN (305) 32 36 55 58 61
R_PAREN (306) 32 36 55 58 61


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program <myString> (53)
    on left: 1, on right: 0
functions <myString> (54)
    on left: 2 3, on right: 1 3
function <myString> (55)
    on left: 4, on right: 3
params <myBlock> (56)
    on left: 5, on right: 4
declarations <myBlock> (57)
    on left: 6 7, on right: 4 5 7
declaration <myBlock> (58)
    on left: 8 9, on right: 7
idents <myBlock> (59)
    on left: 10 11, on right: 8 9 11
statements <myBlock> (60)
    on left: 12 13, on right: 4 13 15 16 17 18
statement <myBlock> (61)
    on left: 14 15 16 17 18 19 20 21 22, on right: 4 13 15 16 17 18
bool_expr <myBlock> (62)
    on left: 23, on right: 15 16 17 18 32 36
bool_expressions <myBlock> (63)
    on left: 24 25, on right: 23 25
relation_and_expr <myBlock> (64)
    on left: 26, on right: 23 25
relation_and_expressions <myBlock> (65)
    on left: 27 28, on right: 26 28
relation_expr <myBlock> (66)
    on left: 29 30 31 32 33 34 35 36, on right: 26 28
comp <myString> (67)
    on left: 37 38 39 40 41 42, on right: 29 33
expression <myBlock> (68)
    on left: 43, on right: 14 22 29 33 47 48 58 61 63
expression_loop <myBlock> (69)
    on left: 44 45 46, on right: 43 45 46
expressions <myBlock> (70)
    on left: 47 48 49, on right: 47 55
terms <myBlock> (71)
    on left: 50 51 52 53, on right: 51 52 53 54
multiplicative_expr <myBlock> (72)
    on left: 54, on right: 43 45 46
term <myBlock> (73)
    on left: 55 56 57 58 59 60 61, on right: 51 52 53 54
var <myBlock> (74)
    on left: 62 63, on right: 14 19 20 57 60 65
vars <myBlock> (75)
    on left: 64 65, on right: 19 20 65


State 0

    0 $accept: . program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    program    go to state 2
    functions  go to state 3
    function   go to state 4


State 1

    4 function: FUNCTION . IDENT SEMICOLON params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    IDENT  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: functions .

    $default  reduce using rule 1 (program)


State 4

    3 functions: function . functions

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (functions)

    functions  go to state 7
    function   go to state 4


State 5

    4 function: FUNCTION IDENT . SEMICOLON params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    SEMICOLON  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 functions: function functions .

    $default  reduce using rule 3 (functions)


State 8

    4 function: FUNCTION IDENT SEMICOLON . params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    BEGIN_PARAMS  shift, and go to state 9

    params  go to state 10


State 9

    5 params: BEGIN_PARAMS . declarations END_PARAMS

    IDENT  shift, and go to state 11

    $default  reduce using rule 6 (declarations)

    declarations  go to state 12
    declaration   go to state 13


State 10

    4 function: FUNCTION IDENT SEMICOLON params . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    BEGIN_LOCALS  shift, and go to state 14


State 11

    8 declaration: IDENT . idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    9            | IDENT . idents COLON INTEGER

    COMMA  shift, and go to state 15

    $default  reduce using rule 10 (idents)

    idents  go to state 16


State 12

    5 params: BEGIN_PARAMS declarations . END_PARAMS

    END_PARAMS  shift, and go to state 17


State 13

    7 declarations: declaration . SEMICOLON declarations

    SEMICOLON  shift, and go to state 18


State 14

    4 function: FUNCTION IDENT SEMICOLON params BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    IDENT  shift, and go to state 11

    $default  reduce using rule 6 (declarations)

    declarations  go to state 19
    declaration   go to state 13


State 15

   11 idents: COMMA . IDENT idents

    IDENT  shift, and go to state 20


State 16

    8 declaration: IDENT idents . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    9            | IDENT idents . COLON INTEGER

    COLON  shift, and go to state 21


State 17

    5 params: BEGIN_PARAMS declarations END_PARAMS .

    $default  reduce using rule 5 (params)


State 18

    7 declarations: declaration SEMICOLON . declarations

    IDENT  shift, and go to state 11

    $default  reduce using rule 6 (declarations)

    declarations  go to state 22
    declaration   go to state 13


State 19

    4 function: FUNCTION IDENT SEMICOLON params BEGIN_LOCALS declarations . END_LOCALS BEGIN_BODY statement SEMICOLON statements END_BODY

    END_LOCALS  shift, and go to state 23


State 20

   11 idents: COMMA IDENT . idents

    COMMA  shift, and go to state 15

    $default  reduce using rule 10 (idents)

    idents  go to state 24


State 21

    8 declaration: IDENT idents COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
    9            | IDENT idents COLON . INTEGER

    INTEGER  shift, and go to state 25
    ARRAY    shift, and go to state 26


State 22

    7 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 7 (declarations)


State 23

    4 function: FUNCTION IDENT SEMICOLON params BEGIN_LOCALS declarations END_LOCALS . BEGIN_BODY statement SEMICOLON statements END_BODY

    BEGIN_BODY  shift, and go to state 27


State 24

   11 idents: COMMA IDENT idents .

    $default  reduce using rule 11 (idents)


State 25

    9 declaration: IDENT idents COLON INTEGER .

    $default  reduce using rule 9 (declaration)


State 26

    8 declaration: IDENT idents COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 28


State 27

    4 function: FUNCTION IDENT SEMICOLON params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY . statement SEMICOLON statements END_BODY

    IF        shift, and go to state 29
    WHILE     shift, and go to state 30
    DO        shift, and go to state 31
    CONTINUE  shift, and go to state 32
    READ      shift, and go to state 33
    WRITE     shift, and go to state 34
    RETURN    shift, and go to state 35
    IDENT     shift, and go to state 36

    statement  go to state 37
    var        go to state 38


State 28

    8 declaration: IDENT idents COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 39


State 29

   15 statement: IF . bool_expr THEN statement SEMICOLON statements ENDIF
   16          | IF . bool_expr THEN statement SEMICOLON statements ELSE statement SEMICOLON statements ENDIF

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 46

    bool_expr            go to state 47
    relation_and_expr    go to state 48
    relation_expr        go to state 49
    expression           go to state 50
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 30

   17 statement: WHILE . bool_expr BEGINLOOP statement SEMICOLON statements ENDLOOP

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 46

    bool_expr            go to state 54
    relation_and_expr    go to state 48
    relation_expr        go to state 49
    expression           go to state 50
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 31

   18 statement: DO . BEGINLOOP statement SEMICOLON statements ENDLOOP WHILE bool_expr

    BEGINLOOP  shift, and go to state 55


State 32

   21 statement: CONTINUE .

    $default  reduce using rule 21 (statement)


State 33

   19 statement: READ . var vars

    IDENT  shift, and go to state 36

    var  go to state 56


State 34

   20 statement: WRITE . var vars

    IDENT  shift, and go to state 36

    var  go to state 57


State 35

   22 statement: RETURN . expression

    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 58

    expression           go to state 59
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 36

   62 var: IDENT .
   63    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 60

    $default  reduce using rule 62 (var)


State 37

    4 function: FUNCTION IDENT SEMICOLON params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement . SEMICOLON statements END_BODY

    SEMICOLON  shift, and go to state 61


State 38

   14 statement: var . ASSIGN expression

    ASSIGN  shift, and go to state 62


State 39

    8 declaration: IDENT idents COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 63


State 40

   33 relation_expr: NOT . expression comp expression
   34              | NOT . TRUE
   35              | NOT . FALSE
   36              | NOT . L_PAREN bool_expr R_PAREN

    TRUE     shift, and go to state 64
    FALSE    shift, and go to state 65
    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 66

    expression           go to state 67
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 41

   30 relation_expr: TRUE .

    $default  reduce using rule 30 (relation_expr)


State 42

   31 relation_expr: FALSE .

    $default  reduce using rule 31 (relation_expr)


State 43

   55 term: IDENT . L_PAREN expressions R_PAREN
   62 var: IDENT .
   63    | IDENT . L_SQUARE_BRACKET expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 60
    L_PAREN           shift, and go to state 68

    $default  reduce using rule 62 (var)


State 44

   56 term: NUMBER .

    $default  reduce using rule 56 (term)


State 45

   59 term: SUB . NUMBER
   60     | SUB . var
   61     | SUB . L_PAREN expression R_PAREN

    IDENT    shift, and go to state 36
    NUMBER   shift, and go to state 69
    L_PAREN  shift, and go to state 70

    var  go to state 71


State 46

   32 relation_expr: L_PAREN . bool_expr R_PAREN
   58 term: L_PAREN . expression R_PAREN

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 46

    bool_expr            go to state 72
    relation_and_expr    go to state 48
    relation_expr        go to state 49
    expression           go to state 73
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 47

   15 statement: IF bool_expr . THEN statement SEMICOLON statements ENDIF
   16          | IF bool_expr . THEN statement SEMICOLON statements ELSE statement SEMICOLON statements ENDIF

    THEN  shift, and go to state 74


State 48

   23 bool_expr: relation_and_expr . bool_expressions

    OR  shift, and go to state 75

    $default  reduce using rule 24 (bool_expressions)

    bool_expressions  go to state 76


State 49

   26 relation_and_expr: relation_expr . relation_and_expressions

    AND  shift, and go to state 77

    $default  reduce using rule 27 (relation_and_expressions)

    relation_and_expressions  go to state 78


State 50

   29 relation_expr: expression . comp expression

    NEQ  shift, and go to state 79
    EQ   shift, and go to state 80
    GTE  shift, and go to state 81
    GT   shift, and go to state 82
    LTE  shift, and go to state 83
    LT   shift, and go to state 84

    comp  go to state 85


State 51

   43 expression: multiplicative_expr . expression_loop

    SUB  shift, and go to state 86
    ADD  shift, and go to state 87

    $default  reduce using rule 44 (expression_loop)

    expression_loop  go to state 88


State 52

   54 multiplicative_expr: term . terms

    MOD   shift, and go to state 89
    DIV   shift, and go to state 90
    MULT  shift, and go to state 91

    $default  reduce using rule 50 (terms)

    terms  go to state 92


State 53

   57 term: var .

    $default  reduce using rule 57 (term)


State 54

   17 statement: WHILE bool_expr . BEGINLOOP statement SEMICOLON statements ENDLOOP

    BEGINLOOP  shift, and go to state 93


State 55

   18 statement: DO BEGINLOOP . statement SEMICOLON statements ENDLOOP WHILE bool_expr

    IF        shift, and go to state 29
    WHILE     shift, and go to state 30
    DO        shift, and go to state 31
    CONTINUE  shift, and go to state 32
    READ      shift, and go to state 33
    WRITE     shift, and go to state 34
    RETURN    shift, and go to state 35
    IDENT     shift, and go to state 36

    statement  go to state 94
    var        go to state 38


State 56

   19 statement: READ var . vars

    COMMA  shift, and go to state 95

    $default  reduce using rule 64 (vars)

    vars  go to state 96


State 57

   20 statement: WRITE var . vars

    COMMA  shift, and go to state 95

    $default  reduce using rule 64 (vars)

    vars  go to state 97


State 58

   58 term: L_PAREN . expression R_PAREN

    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 58

    expression           go to state 98
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 59

   22 statement: RETURN expression .

    $default  reduce using rule 22 (statement)


State 60

   63 var: IDENT L_SQUARE_BRACKET . expression R_SQUARE_BRACKET

    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 58

    expression           go to state 99
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 61

    4 function: FUNCTION IDENT SEMICOLON params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY statement SEMICOLON . statements END_BODY

    IF        shift, and go to state 29
    WHILE     shift, and go to state 30
    DO        shift, and go to state 31
    CONTINUE  shift, and go to state 32
    READ      shift, and go to state 33
    WRITE     shift, and go to state 34
    RETURN    shift, and go to state 35
    IDENT     shift, and go to state 36

    $default  reduce using rule 12 (statements)

    statements  go to state 100
    statement   go to state 101
    var         go to state 38


State 62

   14 statement: var ASSIGN . expression

    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 58

    expression           go to state 102
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 63

    8 declaration: IDENT idents COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 103


State 64

   34 relation_expr: NOT TRUE .

    $default  reduce using rule 34 (relation_expr)


State 65

   35 relation_expr: NOT FALSE .

    $default  reduce using rule 35 (relation_expr)


State 66

   36 relation_expr: NOT L_PAREN . bool_expr R_PAREN
   58 term: L_PAREN . expression R_PAREN

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 46

    bool_expr            go to state 104
    relation_and_expr    go to state 48
    relation_expr        go to state 49
    expression           go to state 73
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 67

   33 relation_expr: NOT expression . comp expression

    NEQ  shift, and go to state 79
    EQ   shift, and go to state 80
    GTE  shift, and go to state 81
    GT   shift, and go to state 82
    LTE  shift, and go to state 83
    LT   shift, and go to state 84

    comp  go to state 105


State 68

   55 term: IDENT L_PAREN . expressions R_PAREN

    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 58

    $default  reduce using rule 49 (expressions)

    expression           go to state 106
    expressions          go to state 107
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 69

   59 term: SUB NUMBER .

    $default  reduce using rule 59 (term)


State 70

   61 term: SUB L_PAREN . expression R_PAREN

    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 58

    expression           go to state 108
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 71

   60 term: SUB var .

    $default  reduce using rule 60 (term)


State 72

   32 relation_expr: L_PAREN bool_expr . R_PAREN

    R_PAREN  shift, and go to state 109


State 73

   29 relation_expr: expression . comp expression
   58 term: L_PAREN expression . R_PAREN

    NEQ      shift, and go to state 79
    EQ       shift, and go to state 80
    GTE      shift, and go to state 81
    GT       shift, and go to state 82
    LTE      shift, and go to state 83
    LT       shift, and go to state 84
    R_PAREN  shift, and go to state 110

    comp  go to state 85


State 74

   15 statement: IF bool_expr THEN . statement SEMICOLON statements ENDIF
   16          | IF bool_expr THEN . statement SEMICOLON statements ELSE statement SEMICOLON statements ENDIF

    IF        shift, and go to state 29
    WHILE     shift, and go to state 30
    DO        shift, and go to state 31
    CONTINUE  shift, and go to state 32
    READ      shift, and go to state 33
    WRITE     shift, and go to state 34
    RETURN    shift, and go to state 35
    IDENT     shift, and go to state 36

    statement  go to state 111
    var        go to state 38


State 75

   25 bool_expressions: OR . relation_and_expr bool_expressions

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 46

    relation_and_expr    go to state 112
    relation_expr        go to state 49
    expression           go to state 50
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 76

   23 bool_expr: relation_and_expr bool_expressions .

    $default  reduce using rule 23 (bool_expr)


State 77

   28 relation_and_expressions: AND . relation_expr relation_and_expressions

    NOT      shift, and go to state 40
    TRUE     shift, and go to state 41
    FALSE    shift, and go to state 42
    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 46

    relation_expr        go to state 113
    expression           go to state 50
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 78

   26 relation_and_expr: relation_expr relation_and_expressions .

    $default  reduce using rule 26 (relation_and_expr)


State 79

   38 comp: NEQ .

    $default  reduce using rule 38 (comp)


State 80

   37 comp: EQ .

    $default  reduce using rule 37 (comp)


State 81

   42 comp: GTE .

    $default  reduce using rule 42 (comp)


State 82

   40 comp: GT .

    $default  reduce using rule 40 (comp)


State 83

   41 comp: LTE .

    $default  reduce using rule 41 (comp)


State 84

   39 comp: LT .

    $default  reduce using rule 39 (comp)


State 85

   29 relation_expr: expression comp . expression

    IDENT    shift, and go to state 43
    NUMBER   shift, and go to state 44
    SUB      shift, and go to state 45
    L_PAREN  shift, and go to state 58

    expression           go to state 114
    multiplicative_expr  go to state 51
    term                 go to state 52
    var                  go to state 53


State 86
